--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,42 @@
         height: 200px;
         font-size: 18px;
       }
+
+    .modal {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    }
+
+/* The Close Button */
+#close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
     </style>
   </head>
   <body>
@@ -41,6 +77,16 @@
       <h1>News Scraper</h1>
       <div id="articles"></div>
       <button id="scrape">Scrape New Articles</button>
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span id="close">&times;</span>
+          <form>
+            Leave a Comment Below.<br>
+            <input type="text" name="comment"><br>
+            <input id="submit" type="submit" value="Submit">
+          </form>
+        </div>
+      </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
